projects/elements/src/icon/icon.css
:host {
  --color: var(--nve-sys-support-color);
  --width: var(--nve-ref-size-400);
  --height: var(--nve-ref-size-400);
  display: inline-flex;
}

[internal-host] {
  color: var(--color);
  width: var(--width);
  height: var(--height);
  place-self: center;
  display: flex;
  place-items: center;
}

svg {
  width: var(--width);
  height: var(--height);
}

:host([size='sm']) {
  --width: var(--nve-ref-size-300);
  --height: var(--nve-ref-size-300);
}

:host([size='lg']) {
  --width: var(--nve-ref-size-500);
  --height: var(--nve-ref-size-500);
}

:host([direction='up'][name='arrow']),
:host([direction='up'][name='caret']),
:host([direction='up'][name='chevron']) {
  transform: rotate(0deg);
}

:host([direction='down'][name='arrow']),
:host([direction='down'][name='caret']),
:host([direction='down'][name='chevron']),
:host([direction='right'][name='expand-panel']),
:host([direction='right'][name='collapse-panel']) {
  transform: rotate(180deg);
}

:host([direction='left'][name='arrow']),
:host([direction='left'][name='caret']),
:host([direction='left'][name='chevron']) {
  transform: rotate(270deg);
}

:host([direction='right'][name='arrow']),
:host([direction='right'][name='caret']),
:host([direction='right'][name='chevron']) {
  transform: rotate(90deg);
}

:host([variant='inherit']) {
  --color: currentColor;
}

:host([status='success']) {
  --color: var(--nve-sys-support-success-color);
}

:host([status='warning']) {
  --color: var(--nve-sys-support-warning-color);
}

:host([status='danger']) {
  --color: var(--nve-sys-support-danger-color);
}

:host([status='accent']) {
  --color: var(--nve-sys-support-accent-color);
}

